--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <title>Dasmoto's Arts & Crafts</title>
+        <link href="./style.css" rel="stylesheet" type="text/css" />
     </head>
     <body>
         <header>
