--- a/index.html
+++ b/index.html
@@ -2,41 +2,47 @@
 <html lang="en">
     <head>
         <title>Dasmoto's Arts & Crafts</title>
-        <link href="./style.css" rel="stylesheet" type="text/css" />
+        <link href="./styles.css" rel="stylesheet" type="text/css" />
     </head>
     <body>
         <header>
             <h1>Dasmoto's Arts & Crafts</h1>
         </header>
         <main>
-            <section>
-                <h2 class="brushes">Brushes</h2>
-                <img 
-                src="./images/hacksaw.jpg"
-                alt="Several brushes put on top of each other" />
+            <section id='brushes'>
+                <h2>Brushes</h2>
+                <img src="./images/hacksaw.jpg" 
+                     alt="Several brushes layed on top of each other"
+                     title="Hacksaw brushes" />
                 <h3>Hacksaw Brushes</h3>
                 <p>
-                    Made of the highest quality oak, Hacksaw brushes are known for their weight and ability to hold paint in large amounts. Available in different sizes. <span>Starting at $3.00 / brush.</span>
+                    Made of the highest quality oak, Hacksaw brushes are known for 
+                    their weight and ability to hold paint in large amounts. Available 
+                    in different sizes. <span>Starting at $3.00 / brush.</span>
                 </p>
             </section>
-            <section>
-                <h2 class="frames">Frames</h2>
-                <img
-                src="./images/frames.jpg"
-                alt="Lot's of different size and color frames" />
+            <section id='frames'>
+                <h2>Frames</h2>
+                <img src="./images/frames.jpg" 
+                     alt="Many colorful frames"
+                     title="Frames" />
                 <h3>Art Frames (assorted)</h3>
                 <p>
-                    Assorted frames made of different material, including MDF, birchwood, and PDE. Select frames can be sanded and painted according to your needs. <span>Starting at $2.00 / frame.</span>
+                    Assorted frames made of different material, including MDF, birchwood, 
+                    and PDE. Select frames can be sanded and painted according to your needs. 
+                    <span>Starting at $2.00 / frame.</span>
                 </p>
             </section>
-            <section>
-                <h2 class="paint">Paint</h2>
-                <img
-                src="./images/finnish.jpg"
-                alt="Different colors in tubes with some brushes" />
+            <section id='paint'>
+                <h2>Paint</h2>
+                <img src="./images/finnish.jpg" 
+                     alt="Paint tubes on the table"
+                     title="Paint tubes" />
                 <h3>Clean Finnish Paint</h3>
                 <p>
-                    Imported paint from Finland. Over 256 colors available in-store, varying in quantity (1 oz. to 8 oz.). Clean Finnish paint microbinds to canvas, increasing the finish and longevity of any artwork. <span>Starting at $5.00 / tube.</span>
+                    Imported paint from Finland. Over 256 colors available in-store, varying 
+                    in quantity (1 oz. to 8 oz.). Clean Finnish paint microbinds to canvas, 
+                    increasing the finish and longevity of any artwork. <span>Starting at $5.00 / tube.</span>
                 </p>
             </section>
         </main>
